--- a/styles/colors.less
+++ b/styles/colors.less
@@ -4,7 +4,7 @@
 @light-gray: #969896;
 @gray: #373b41;
 @dark-gray: #282a2e;
-@very-dark-gray: #1d1f21;
+@very-dark-gray: #323238;
 
 @cyan: #8abeb7;
 @blue: #81a2be;
