--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,7 +1,7 @@
 // These colors are specific to the theme. Do not use in a package!
 
-@very-light-gray: #c5c8c6;
-@light-gray: #969896;
+@very-light-gray: #E7E9F0;
+@light-gray: #A3A3A3;
 @gray: #373b41;
 @dark-gray: #282a2e;
 @very-dark-gray: #323238;
