--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,15 +1,15 @@
 // These colors are specific to the theme. Do not use in a package!
 
-@very-light-gray: #E7E9F0;
+@very-light-gray: #E7E9F0,;
 @light-gray: #A3A3A3;
 @gray: #373b41;
 @dark-gray: #282a2e;
 @very-dark-gray: #323238;
 
-@cyan: #8abeb7;
-@blue: #81a2be;
-@purple: #b294bb;
-@green: #b5bd68;
-@red: #cc6666;
-@orange: #de935f;
-@light-orange: #f0c674;
+@cyan: #6C8DED;
+@blue: #5781FF;
+@purple: #D86CED;
+@green: #6CED95;
+@red: #F46B6B;
+@orange: #F4A96B;
+@light-orange: #FCD693;
