--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,15 +1,13 @@
-// These colors are specific to the theme. Do not use in a package!
-
-@very-light-gray: #E7E9F0;
+@very-light-gray: #E7E9F0,;
 @light-gray: #A3A3A3;
 @gray: #373b41;
-@dark-gray: #282a2e;
-@very-dark-gray: #323238;
+@dark-gray: #373841;
+@very-dark-gray: #292A34;
 
-@cyan: #8abeb7;
-@blue: #81a2be;
-@purple: #b294bb;
-@green: #b5bd68;
-@red: #cc6666;
-@orange: #de935f;
-@light-orange: #f0c674;
+@cyan: #A8E8D7;
+@blue: #75E6F7;
+@purple: #CDA2FF;
+@green: #B0F9C0;
+@red: #F18585;
+@orange: #F1B385;
+@light-orange: #F1D485;
