--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -5,7 +5,7 @@
 
 // General colors
 @syntax-text-color: @very-light-gray;
-@syntax-cursor-color: white;
+@syntax-cursor-color: @very-light-gray;
 @syntax-selection-color: lighten(@dark-gray, 10%);
 @syntax-background-color: @very-dark-gray;
 
